# rag-ai-agent-book

./: .gitignore  README.md
ch02/: 2-6-function-calling.py  p26.py  p29-streaming.py  p30-json-mode.py  pyproject.toml
ch03/: 3-4-few-shot.py  pyproject.toml
ch04/: langsmith-setup.py  p70-chat-model.py  p74-ChatPromptTemplate.py  p75-MessagesPlaceholder.py  p76-langsmith-prompts.py  p85-lcel.py  pyproject.toml
ch05/: 5.1-runnable-zero-shot-cot.py  5.2-runnable-lambda.py  5.3-runnable-parallel.py  5.4-runnable-passthough.py  5.5-chat-history.py  hello.py  pyproject.toml
ch06/: 6.2.py  6.3-HyDE.py  6.3-multiple-queries.py  6.4-RAG-Fusion.py  6.4-Rerank-with-Cohere.py  6.5-multiple-retrievers.py  hello.py  pyproject.toml
ch07/: 7.4.py  7.6-gather-feedback.py  hello.py  pyproject.toml
ch09/: 9.2.py  9.3-q-and-a-app.py  pyproject.toml
ch10/: README.md  main.py  pyproject.toml
ch10/documentation_agent/: main.py
