[project]
name = "ch06"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "langchain-chroma>=0.2.1",
    "langchain-cohere>=0.4.2",
    "langchain-community>=0.3.17",
    "langchain-core>=0.3.34",
    "langchain-openai>=0.3.4",
    "tavily-python>=0.5.1",
]
